# ksos-tools

./: CHANGELOG.md  LICENSE  README.md  example.py  ksos_env.yml  pyproject.toml  setup.cfg
.github/workflows/: python-package-conda.yml
ksos_tools/: utils.py
ksos_tools/examples/: benchmarks.py  polynomial.py
ksos_tools/solvers/: external.py  helpers.py  ksos.py  newton.py  problem.py  sos.py
tests/: test_benchmarks.py  test_newton.py  test_polynomial_problems.py  test_utils.py
