[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ksos_tools"
version = "0.0.2"
authors = [
    { name = "Antoine Groudiev", email = "antoine.groudiev@ens.psl.eu" },
    { name = "Frederike Dümbgen", email = "frederike.duembgen@gmail.com" }
]
description = "Implementation of the Kernel Sum-of-Squares optimization framework and various related solvers"
readme = "README.md"
license = { file = "LICENSE" }
urls = { Homepage = "https://github.com/Simple-Robotics/ksos-tools/" }

[tool.setuptools.packages.find]
exclude = ["tests*"]
